aggiunta cards, css 25%

--- a/index.html
+++ b/index.html
@@ -61,54 +61,55 @@
     <div class="container">
 <h2>plan text</h2>
 
-<main class="gallery">
+<div class="gallery">
   <div class="top-card-container">
     <div class="card">
-      <div class="title-card"></div>
+      <div class="title-card">Title Card</div>
       <div class="upper-card">
-        <div class="card-name"></div>
-        <div class="card-price"></div>
-        <div class="card-recurrence"></div>
-        <div class="card-users"></div>
-        <div class="card-storage"></div>
-        <div class="card-functions"></div>
+        <div class="card-name">plan name</div>
+        <div class="card-price">plan price</div>
+        <div class="card-recurrence">payment recurrence</div>
+        <div class="card-users">how many users</div>
+        <div class="card-storage">storage copy</div>
+        <div class="card-functions">functions</div>
         <nav class="freetrial"><a href="#"></a>freetrial</nav>
         <nav class="buy now"> or <a href="#"></a>buynow</nav>
       </div>
   <div class="lower-card">
           <div class="card-highlights">
-<div class="highlights-title"></div>     
-<div class="highlight1"></div>
-<div class="highlight2"></div>
+<div class="highlights-title">plan highlights</div>     
+<div class="highlight1">hl1</div>
+<div class="highlight2">hl2</div>
 </div>
-
+</div>
+</div>
 <div class="card">
-  <div class="title-card"></div>
+  <div class="title-card">Title Card</div>
   <div class="upper-card">
-    <div class="card-name"></div>
-    <div class="card-price"></div>
-    <div class="card-recurrence"></div>
-    <div class="card-users"></div>
-    <div class="card-storage"></div>
-    <div class="card-functions"></div>
+    <div class="card-name">plan name</div>
+    <div class="card-price">plan price</div>
+    <div class="card-recurrence">payment recurrence</div>
+    <div class="card-users">how many users</div>
+    <div class="card-storage">storage copy</div>
+    <div class="card-functions">functions</div>
     <nav class="freetrial"><a href="#"></a>freetrial</nav>
     <nav class="buy now"> or <a href="#"></a>buynow</nav>
   </div>
 <div class="lower-card">
       <div class="card-highlights">
-<div class="highlights-title"></div>     
-<div class="highlight1"></div>
-<div class="highlight2"></div>
-<div class="highlight3"></div>
-<div class="highlight4"></div>
-<div class="highlight5"></div>
+<div class="highlights-title">plan highlights</div>     
+<div class="highlight1">hl1</div>
+<div class="highlight2">hl2</div>
+<div class="highlight3">hl3</div>
+<div class="highlight4">hl4</div>
+<div class="highlight5">hl5</div>
 </div>
   
       </div>
       </div>
 
       <div class="card">
-        <div class="title-card"></div>
+        <div class="title-card">Title Card</div>
         <div class="upper-card">
           <div class="card-name"></div>
           <div class="card-price"></div>
@@ -130,6 +131,8 @@
   </div>
    
 
+</div>
+</div>
 </div>
   </section>
 
